--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install Dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn yarn-cache
+        run: yarn install
 
   e2e-test:
     needs: Setup
