--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -38,8 +38,10 @@ jobs:
     steps:
       - name: Install Playwright Browsers
         run: yarn playwright install --with-deps
+
       - name: Run Playwright tests
         run: yarn playwright test
+
       - uses: actions/upload-artifact@v3
         if: always()
         with:
@@ -51,6 +53,12 @@ jobs:
     needs: Setup
     runs-on: ubuntu-latest
     steps:
+      - name: List files in the current directory
+        run: |
+          ls -al
+      - name: Find package.json file
+        run: |
+          find . -name package.json
       - name: Build Project
         run: yarn run build
 
