--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -53,6 +53,8 @@ jobs:
     needs: Setup
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: List files in the current directory
         run: |
           ls -al
