--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   Setup:
     runs-on: ubuntu-latest
+    outputs:
+      app-path: ${{steps.checkout.outputs.path}}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -62,11 +64,15 @@ jobs:
         run: |
           find . -name package.json
       - name: Build Project
-        run: yarn run build
+        run: |
+          cd ${{ needs.Setup.outputs.app-path }}
+          yarn build
 
   Deploy:
     needs: Build
     runs-on: ubuntu-latest
     steps:
       - name: Deploy
-        run: yarn start
+        run: |
+        cd ${{ needs.Setup.outputs.app-path }}
+          yarn start
