--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -49,7 +49,12 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v1
         with:
-          name: project-artifact # Specify the name of the artifact to download
+          name: project-artifact
+
+      - name: Move to artifact folder
+        run: |
+          cd ./project-artifact
+
       - name: Cache dependencies
         uses: actions/cache@v3
         id: yarn-cache
@@ -69,7 +74,6 @@ jobs:
 
       - name: Build Project
         run: |
-          cd ./project-artifact
           yarn build
 
   Deploy:
