--- a/.github/workflows/Check-for-Development.yml
+++ b/.github/workflows/Check-for-Development.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - 'feature/**'
-  pull_request:
-    branches:
-      - 'release/**'
+      - 'hotfix/**'
 
 jobs:
   Unit-test:
