docs: yml 파일 추가수정

--- a/.github/workflows/E2E-test.yml
+++ b/.github/workflows/E2E-test.yml
@@ -4,6 +4,7 @@ on:
 jobs:
   Run:
     timeout-minutes: 60
+    if: startsWith(github.ref, 'refs/heads/feat/') || startsWith(github.ref, 'refs/heads/hotfix/')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
