--- a/.github/workflows/Unit-test.yml
+++ b/.github/workflows/Unit-test.yml
@@ -3,6 +3,7 @@ on:
 
 jobs:
   Run:
+    if: startsWith(github.ref, 'refs/heads/feat/') || startsWith(github.ref, 'refs/heads/hotfix/')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
