--- a/.github/workflows/E2E-test.yml
+++ b/.github/workflows/E2E-test.yml
@@ -3,8 +3,9 @@ on:
 
 jobs:
   Run:
-    timeout-minutes: 60
+    if: startsWith(github.ref, 'refs/heads/feat') || startsWith(github.ref, 'refs/heads/hotfix')
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout
         uses: actions/checkout@v3
